sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '<-' expected but '=' found.
    for (k = 0 to getNombreValeur() -2 ){
           ^AlgBubbleSort1:12: error: illegal start of simple expression
  }
  ^